--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ eventlet = "*"
 mysql-connector-python = "*"
 elasticsearch-dsl = "*"
 pycryptodome = "*"
+python-docx = "*"
 
 [requires]
 python_version = "3.8"
